# apex-bot

./: .env.dev  .gitignore  Dockerfile  README.md  data.json  docker-compose.yml  main.py  pyproject.toml
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml
apex_bot/: als.py  controller.py  tweet.py  twitter.py
media/: README.md
