[tool.poetry]
name = "apex-bot"
version = "0.1.0"
description = ""
authors = ["keitarowatanabe <ktaroabobon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
tweepy = "^4.9.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
